# mammos-dft

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.binder/: environment.yml
.github/workflows/: check-changelog.yml  publish.yml  test.yml
changes/: 19.fixed.md  41.added.md  43.misc.md  46.changed.md  47.changed.md  47.misc.md  56.added.md
examples/: database.ipynb  get_cif.ipynb  get_dft_output.ipynb  index.rst  intrinsic_properties.ipynb  lookup_materials.ipynb  quickstart.ipynb  search_materials.ipynb
src/mammos_dft/: __init__.py  db.py
src/mammos_dft/data/: db.csv
src/mammos_dft/data/0005/: exchange
src/mammos_dft/data/Y2Ti4Fe18/: structure.cif
src/mammos_dft/db/: __init__.py  db.csv  tables.py
src/mammos_dft/vasp/: __init__.py
tests/: test_db.py  test_packages.py
